force-app/main/default/objects/CustomObject__c/fields/Data_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Data_Field_1__c</fullName>
    <label>Data Field 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>