force-app/main/default/objects/CustomObject__c/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant ID</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>CustomObjects</relationshipLabel>
    <relationshipName>CustomObjects</relationshipName>
    <type>Lookup</type>
</CustomField>